--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.quickbirdstudios:opencv:3.4.1'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
