--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
+//        applicationId "com.app.detection"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
